minor fixes on dark mode theme icons

--- a/src/app/settings/settings.component.css
+++ b/src/app/settings/settings.component.css
@@ -297,5 +297,12 @@
     .theme-selector {
         flex-direction: column;
     }
+
+    .theme-mode-info {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+    }
 }
 
